--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,13 @@ before_install:
   -in travisci_rsa.enc -out travisci_rsa -d
 - chmod 0600 travisci_rsa
 - cp travisci_rsa ~/.ssh/id_rsa
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get update -qq
-- sudo apt-get install -y libarmadillo2 libarmadillo-dev
 - sudo pip install cpp-coveralls
 script:
 - make
 after_success:
-- "./divopt"
-- coveralls --exclude lib --exclude include --exclude src/c_logger.cpp --gcov-options
+- "./tikz3d"
+- coveralls --exclude lib --exclude include --gcov-options
   '\-lp'
 - export REPO_NAME=${TRAVIS_REPO_SLUG#*/}
 - sudo apt-get --no-install-recommends install doxygen
@@ -31,7 +29,7 @@ after_success:
 - git add . -A
 - CHANGESET=$(git rev-parse --verify HEAD)
 - git commit -m "Automatic Travis update of documentation ${CHANGESET}"
-- git remote set-url origin git@github.com:njanetos/divopt.git
+- git remote set-url origin git@github.com:njanetos/tikz3d.git
 - git push origin
 notifications:
   email:
