--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: cpp
 compiler: gcc
 sudo: required
 before_install:
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get update -qq
+install:
 - sudo pip install cpp-coveralls
+- sudo apt-get install -qq g++-4.8
+- export CXX="g++-4.8"
 script:
 - make
 after_success:
